--- a/configuration.properties
+++ b/configuration.properties
@@ -3,7 +3,7 @@
 
 browser = chrome
 
-toUrl = https://www.waybien.com/
+toUrl = https://affiliate.antlaradental.com/
 
 toGecerliEmail =
 toGecerliPassword =
