--- a/configuration.properties
+++ b/configuration.properties
@@ -4,6 +4,7 @@
 browser = chrome
 
 toUrl = https://affiliate.antlaradental.com/
+referUrl=https://affiliate.antlaradental.com/contact/?aff=adembas
 
 toGecerliEmail =
 toGecerliPassword =
